fixed layout on mobile

--- a/style.css
+++ b/style.css
@@ -53,8 +53,8 @@ body, html{
 }
 #addNew {
     display: flex;
-    height: 110px;
-    width: 110px;
+    height: 6.8rem;
+    width: 6.8rem;
     align-self: center;
     align-items: center;
     justify-content: center;
@@ -136,8 +136,8 @@ body, html{
     width: 1.2rem;
     height: 1.2rem;
     position: relative;
-    left: 13.3rem;
-    bottom: 0.7rem;
+    left: 14rem;
+    bottom: 0.3rem;
     cursor: pointer;
 }
 .deleteButton:hover {
@@ -151,7 +151,7 @@ body, html{
 @media screen and (max-width: 26.563rem) {
 
     body, html {
-    font-size: 10px;
+    font-size: 8px;
     }
     #grid {
         grid-template-columns: 1fr 1fr;
